# simple-cv-project

./: .pre-commit-config.yaml  README.md  pyproject.toml  simple_motion_detection.py  simply_cv.py
detectors/: detector_interface.py  fake_boolean_detector.py  fake_detector.py  motion_detection.py  object_detector.py
tests/: conftest.py  test_webcamera.py
tests/capture_motion/: test_capture_motion.py
tests/detectors/: test_boolean_detector.py  test_object_detector.py
tests/test_data/: test_save_buffer.avi
tests/test_motion_detector/: test_motion_detector.py
tests/test_video_source/: test_video_source_interface.py  test_webcamera.py
tests/test_video_writer/: test_video_writer.py
tests/use_case/: test_monitor_stream.py
tests/video_source/: test_fake_boolean_stream.py  test_fake_stream.py  test_stream.py
tests/video_writer/: test_fake_video_writer.py  test_local_video_writer.py  test_video_writer.py
use_case/: capture_motion.py  monitor_stream.py
utility_scripts/: footage_generator.py  simple_capture_motion.py  simple_motion_detection.py  simple_object_classifier.py  simple_person_detecion.py  ultralytics_check.py
utils/: stream_buffer.py
video_source/: __init__.py  fake_boolean_stream.py  fake_stream.py  fake_video_source.py  stream.py  stream_exceptions.py  video_source_interface.py  webcamera.py
video_writer/: fake_video_writer.py  local_video_writer.py  video_writer.py  video_writer_interface.py
